# Open3D

./: .dockerignore  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  Main.cpp  Open3D.cpp  README.md  RELEASE.md  async_draw.py  benchark.sh  benchmark.py  benchmark.sh  benchmark_intel_numpy.txt  benchmark_one.sh  benchmark_plot.py  benchmark_plot_one.py  build.sh  build_and_log.sh  build_and_rebuild.sh  build_docs.sh  debug.py  find_files.py  jupyter_emulate.py  multi_core_behavior.py  multi_core_benavior.py  plot_benchmarks.py  plot_cameras.py  read_out_npz.py  readme.md  rebuild.sh  replace_all.py  run_benchmark.sh  run_slac.sh  set_camera_param.py  set_camera_param_new.py  temp.ispc  test_012.py  test_012_out.txt  (+7 more)
cpp/open3d/: CMakeLists.txt  Open3D.h  Open3D.h.in  Open3DConfig.cpp
cpp/open3d/core/: CMakeLists.txt  CUDAUtils.cpp  CUDAUtils.h  Device.h  Dispatch.h  Dtype.h  EigenAdaptor.h  EigenConverter.cpp  Indexer.cpp  Indexer.h  Indexer.isph  MemoryManager.cpp  MemoryManager.h  MemoryManagerCUDA.cu  MemoryManagerCUDACached.cu  MemoryManagerCUDASimple.cu  MemoryManagerStatistic.cpp  ParallelFor.h  Scalar.h  ShapeUtil.cpp  ShapeUtil.h  SizeVector.h  SparseIndexer.cpp  SparseIndexer.h  SparseTensorList.h  Tensor.cpp  Tensor.h  TensorBench.cpp  TensorBench.h  TensorList.h
cpp/open3d/core/algebra/: Matmul.cpp  Solver.cpp
cpp/open3d/core/hashmap/: DefaultHashmap.cpp  DeviceHashmap.h  Dispatch.h  Hashmap.cpp  Hashmap.h  HashmapBase.h  TemplateHashmap.h  TensorHash.cpp  TensorHash.h  TestMemoryManager.cpp  TestTImage.cpp  TestTPointCloud.cpp  Traits.h  test_hashmap.cu
cpp/open3d/core/kernel/: BinaryEWCPU.cpp  BinaryEWCPU.ispc  CPULauncher.h  CUDALauncher.cuh  ImageOp.cpp  ImageOp.h  ImageOpCPU.cpp  ImageOpCUDA.cu  IndexGetSetCPU.cpp  ParallelUtil.h  ReductionCPU.cpp  SpecialOp.cpp  SpecialOp.h  SpecialOpCPU.cpp  SpecialOpCUDA.cu  UnaryEWCPU.cpp  UnaryEWCPU.ispc
cpp/open3d/core/linalg/: AddMM.cpp  AddMM.h  LU.cpp  TriCPU.cpp
cpp/open3d/core/nns/: FaissIndex.cpp  KnnSearchImplNew.cuh  KnnSearchOps.cu  KnnSearchOpsNew.cu
cpp/open3d/data/: CMakeLists.txt  Dataset.cpp  Dataset.h  Download.cpp  Download.h  Downloader.cpp  Downloader.h  ExtractZIP.cpp  ICLNUIM_LivingRoomFragments.cpp
cpp/open3d/ml/contrib/: IoUImpl.h
cpp/open3d/ml/pytorch/: CMakeLists.txt
cpp/open3d/ml/tensorflow/: CMakeLists.txt
cpp/open3d/pipelines/color_map/: ColorMapOptimization.cpp  ColorMapUtils.cpp  NonRigidOptimizer.cpp  TriangleMeshAndImageUtilities.cpp  TriangleMeshAndImageUtilities.h
cpp/open3d/pipelines/integration/: MarchingCubesConst.h
cpp/open3d/pipelines/registration/: DopplerICP.cpp  DopplerICP.h  FastGlobalRegistration.cpp  Registration.cpp  Registration.h
cpp/open3d/t/geometry/: Image.cpp  Image.h  PointCloud.cpp  PointCloud.h  RaycastingScene.cpp  TSDFVoxelGrid.cpp  TSDFVoxelGrid.h  TriangleMesh.cpp  TriangleMesh.h
cpp/open3d/t/io/: CMakeLists.txt  NumpyIO.cpp  NumpyIO.h  PointCloudIO.cpp  TriangleMeshIO.cpp
cpp/open3d/test_tmp/: CMakeLists.txt  TestHashmap.cu  TestMatmul.cpp  TestPcdLegacyMerge.cpp  TestPcdMerge.cpp  TestSolve.cpp  TestTImage.cpp  TestTPointCloud.cpp  TestTensorHash.cpp  TestVoxelGrid.cpp  a.out  mc.cpp  test_hashmap.cpp  test_hashmap.cu
cpp/open3d/tgeometry/: CMakeLists.txt  Geometry2D.h  Geometry3D.cpp  Image.cpp  Image.h  ImageFactory.cpp  MarchingCubesConst.h  PointCloud.cpp  PointCloud.h  PointCloudFactory.cpp  VoxelGrid.cpp  VoxelGrid.h
cpp/open3d/utility/: CMakeLists.txt  Console.cpp  Console.h  DataManager.cpp  DataManager.h  Eigen.cpp  Eigen.h  TestMiniVec.h  TestMiniVecCPU.cpp  TestMiniVecImpl.h  Timer.cpp  Timer.h
cpp/open3d/visualization/gui/: Application.cpp  CMakeLists.txt  FileDialog.cpp  PickPointsInteractor.cpp  SceneWidget.cpp  Window.cpp
cpp/open3d/visualization/rendering/: Renderer.cpp
cpp/open3d/visualization/visualizer/: O3DVisualizer.cpp  O3DVisualizer.h  Receiver.cpp
cpp/open3d/visualization/webrtc_server/: CMakeLists.txt  ImageCapturer.cpp  WebRTCWindowSystem.cpp
cpp/tests/: CMakeLists.txt  Main.cpp  Tests.h  UnitTest.h
cpp/tests/core/: EigenAdaptor.cpp  EigenConverter.cpp  KnnIndex.cpp  Tensor.cpp  TensorCheck.cpp
cpp/tests/data/: Dataset.cpp  Download.cpp  Extract.cpp
cpp/tests/geometry/: HalfEdgeTriangleMesh.cpp  Octree.cpp  PointCloud.cpp  RGBDImage.cpp
cpp/tests/io/: OctreeIO.cpp  VoxelGridIO.cpp
cpp/tests/pipelines/integration/: UniformTSDFVolume.cpp
cpp/tests/t/geometry/: Image.cpp  PointCloud.cpp  TSDFVoxelGrid.cpp  TriangleMesh.cpp
cpp/tests/t/io/: ImageIO.cpp  NumpyIO.cpp  PointCloudIO.cpp  TriangleMeshIO.cpp
cpp/tests/tgeometry/: PointCloud.cpp
cpp/tests/utility/: CMakeLists.txt  MiniVec.cpp
examples/hashmap/: BaseHashMap.h  CMakeLists.txt  DemoSlabhash.cu  StdGPUDemo.cu  TestHashmap.cu  TestHashmapInt.cu  TestHashmapInt3.cu  TestHashmapVoxelDownsample.cu  analyze_ablation.py  analyze_ash_slab.py  analyze_ash_stdgpu.py  analyze_synthetic.py  analyze_voxelhashing.py  analyze_voxelization.py  readme.md  run_synthetic.py  test_voxeldownsample.py  time_analyzer.py
examples/hashmap/DemoCudpp/: DemoCudpp.cu  commandline.h  cuda_util.h  mt19937ar.cpp  random_numbers.cpp  random_numbers.h  stopwatch.h  stopwatch.inl
src/Open3D/Core/: .#MemoryManager.h  Blob.h  CMakeLists.txt  CUDAUtils.h  Dispatch.h  Dtype.h  Indexer.h  MemoryManager.cpp  MemoryManager.h  MemoryManagerCUDA.cu
src/Open3D/Core/Hashmap/: .#HashmapCPU.h  .#HashmapCUDA.cuh  Consts.h  DefaultHashmap.cpp  Hashmap.h  HashmapBase.h  HashmapCPU.h  HashmapCPU.hpp  HashmapCUDA.cuh  HashmapCUDA.h  InternalKvPairManager.h  InternalMemoryManager.h  InternalNodeManager.h  TemplateHashmap.h  TensorHash.cpp  TensorHash.cu  TensorHash.h  TensorHashCPU.cpp  TensorHashCPU.cuh  TensorHashCUDA.cu  TensorHashCUDA.cuh  TestHashmap.cu  Traits.h  Types.h  test_func.cu  test_func_lib.cu  test_func_lib.h  (+4 more)
src/Open3D/TGeometry/: CMakeLists.txt  Geometry2D.h  Image.cpp  Image.h  ImageFactory.cpp  PointCloud.cpp  PointCloud.h  PointCloudFactory.cpp  TestMemoryManager.cpp  TestTImage.cpp  TestTPointCloud.cpp  VoxelGrid.h
(+670 files in other folders)
